@@ -1239,7 +1239,8 @@ containing all of the search terms will appear in the result).",
 'contextlines'	=> 'Lines per hit:',
 'contextchars'	=> 'Context per line:',
 'stubthreshold' => 'Threshold for stub display:',
-'recentchangescount' => 'Titles in recent changes:',
+'recentchangesdays' => 'Days to show in recent changes:',
+'recentchangescount' => 'Number of edits to show in recent changes:',
 'savedprefs'	=> 'Your preferences have been saved.',
 'timezonelegend' => 'Time zone',
 'timezonetext'	=> 'The number of hours your local time differs from server time (UTC).',
